# chess-board

./: CMakeLists.txt  README.md  main.cc
Board/include/: board.h  cell.h
Board/src/: board.cc  cell.cc
Piece/include/: piece.h
Piece/src/: piece.cc
Test/: test.cc
